# test-repo-cliente

./: .gitmodules  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/backend-python/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
examples/backend-python/.github/workflows/: ci.yml
examples/backend-python/src/: main.py
examples/frontend-react/: .pre-commit-config.yaml  index.html  package-lock.json  package.json  vite.config.ts
examples/frontend-react/.github/workflows/: ci.yml
examples/frontend-react/src/: App.test.tsx  App.tsx
examples/fullstack-k8s/: .gitignore  .pre-commit-config.yaml  Dockerfile
examples/fullstack-k8s/.github/workflows/: ci.yml
examples/fullstack-k8s/backend/: pyproject.toml
examples/fullstack-k8s/backend/src/: main.py
examples/fullstack-k8s/backend/tests/: test_main.py
examples/fullstack-k8s/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/fullstack-k8s/frontend/src/: App.test.tsx  App.tsx
examples/fullstack-k8s/helm-chart/: Chart.yaml  values.yaml
examples/fullstack-k8s/helm-chart/templates/: deployment.yaml
examples/ml-data-pipeline/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini
examples/ml-data-pipeline/.github/workflows/: ci.yml
examples/ml-data-pipeline/notebooks/: example.ipynb
examples/ml-data-pipeline/scripts/: validate_model.py  validate_schema.py
examples/ml-data-pipeline/src/: predict.py
examples/ml-data-pipeline/tests/: test_predict.py
examples/ml-data-pipeline/tests/model/: test_validation.py
